# Game_Of_Life

./: CMakeLists.txt  Pattern.txt  README.md  main.cpp
PDCurses-3.9/: CMakeLists.txt
